<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:background="#3EFAC6C6">

        <ImageView
            android:id="@+id/driver_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/date"/>

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/from"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintStart_toEndOf="@id/driver_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Abasseya Square"
            android:textSize="@dimen/large_text_size_rv"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/from"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/to"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintStart_toStartOf="@id/from"
            app:layout_constraintTop_toBottomOf="@id/from" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ain Shams University"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintEnd_toEndOf="@+id/source"
            app:layout_constraintStart_toStartOf="@id/source"
            app:layout_constraintTop_toTopOf="@id/to" />


        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cost"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintStart_toStartOf="@id/to"
            app:layout_constraintTop_toBottomOf="@id/to" />

        <TextView
            android:id="@+id/cost_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200 EGP"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintEnd_toEndOf="@+id/destination"
            app:layout_constraintStart_toStartOf="@+id/destination"
            app:layout_constraintTop_toTopOf="@id/cost" />

        <TextView
            android:id="@+id/car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Car Number:"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintStart_toStartOf="@id/cost"
            app:layout_constraintTop_toBottomOf="@id/cost" />

        <TextView
            android:id="@+id/car_no_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A123"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintEnd_toEndOf="@id/cost_value"
            app:layout_constraintStart_toStartOf="@id/cost_value"
            app:layout_constraintTop_toTopOf="@id/car_no" />
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Status: "
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintStart_toStartOf="@id/car_no"
            app:layout_constraintTop_toBottomOf="@id/car_no" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upcoming"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintEnd_toEndOf="@+id/car_no_value"
            app:layout_constraintStart_toStartOf="@+id/car_no_value"
            app:layout_constraintTop_toTopOf="@id/status" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawablePadding="5dp"
            android:text="Tuseday-Nov 10"
            android:textSize="@dimen/small_text_size_rv"
            app:drawableStartCompat="@drawable/calendar"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="Depart at: 7:30 am"
            android:textSize="@dimen/small_text_size_rv"
            app:drawableStartCompat="@drawable/calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@id/date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/main"
            android:text="Cancel Ride"
            android:textSize="@dimen/large_text_size_rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>